# mepaste

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_users_and_paste_user_id.py  0003_drop_users_and_user_id.py
backend/app/: auth.py  db.py  main.py  models.py  schemas.py  security.py  slug.py
backend/app/routers/: auth.py  pastes.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  i18n.ts  icons.ts  main.tsx  responsive.ts  theme.ts
frontend/src/components/: AppFrame.tsx  BrandMark.tsx  Chip.tsx  DamavandScene.tsx  Icon.tsx  PasteOptionsSheet.tsx  PillBadge.tsx  PublishToast.tsx  Seal.tsx  SmashOverlay.tsx  Stamp.tsx  TabBar.tsx
frontend/src/components/auth/: AuthField.tsx  OAuthButton.tsx
frontend/src/components/desktop/: DesktopFrame.tsx  DesktopSmashOverlay.tsx  Kbd.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/screens/: AboutScreen.tsx  BurnWarningScreen.tsx  CreateScreen.tsx  ListScreen.tsx  LockedPasteScreen.tsx  PasteRoute.tsx  SettingsScreen.tsx  SignInScreen.tsx  SignUpScreen.tsx  ViewScreen.tsx  VisitorPasteScreen.tsx
frontend/src/screens/desktop/: DesktopCreateScreen.tsx  DesktopListScreen.tsx  DesktopLockedPasteScreen.tsx  DesktopSignInScreen.tsx  DesktopSignUpScreen.tsx  DesktopViewScreen.tsx  DesktopVisitorPasteScreen.tsx
